# home-infra-analytics

./: .gitignore  docker-compose.yml
api/: .bandit  .dockerignore  .pre-commit-config.yaml  Dockerfile  config.py  dependencies.py  main.py  pyproject.toml  run.sh  run_debug.sh
api/core/: db.py  redis.py
api/src/: helpers.py  schemas.py  views.py
clickhouse/: Dockerfile  init-config.sh  init.sql  init.sql.example
clickhouse/config.d/: cluster.xml.template  timezone.xml  zookeeper.xml
clickhouse/users.d/: infra_user.xml.template
collectors/: collector.py  config.py  crontab  main.py  models.py  node_collector.py  requirements.txt  sender.py
grafana/: get_metrics_example.sql
keeper/: config.xml
scripts/: precommit_mypy.sh
