[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "dgolov",email = "dgolov@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "clickhouse-driver (>=0.2.10,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
