[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "dgolov",email = "dgolov@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiochclient (>=2.6.0,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis[async] (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true
no_implicit_optional = true

show_error_codes = true
pretty = true

exclude = [
    "tests/",
]
